--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -75,7 +75,6 @@ h1 {
 }
 
 .btn {
-    background-color: #ff5722;
     border: none;
     padding: 8px;
     border-radius: 4px;
@@ -174,3 +173,8 @@ h1 {
 .theme2-header { background-color: #737373; }
 
 
+
+.btn{
+    width: 150px;
+    height: 50px;
+}
