--- a/templates/structure/sidebar.html.twig
+++ b/templates/structure/sidebar.html.twig
@@ -45,18 +45,20 @@
               <span class="hide-menu">Statistiques</span>
             </a>
           </li>
-          <li class="nav-small-cap">
-            <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
-            <span class="hide-menu">Administration</span>
-          </li>
-          <li class="sidebar-item">
-            <a class="sidebar-link" href="{{path('admin')}}" aria-expanded="false">
-              <span>
-                <img src="{{ asset('asset/icons/admin.png') }}" class="ti icon">
-              </span>
-              <span class="hide-menu">Admin</span>
-            </a>
-          </li>
+          {% if is_granted('ROLE_ADMIN') %}
+            <li class="nav-small-cap">
+              <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
+              <span class="hide-menu">Administration</span>
+            </li>
+            <li class="sidebar-item">
+              <a class="sidebar-link" href="{{ path('admin') }}" aria-expanded="false">
+                <span>
+                  <img src="{{ asset('asset/icons/admin.png') }}" class="ti icon">
+                </span>
+                <span class="hide-menu">Admin</span>
+              </a>
+            </li>
+          {% endif %}
           <li class="nav-small-cap">
             <i class="ti ti-dots nav-small-cap-icon fs-4"></i>
             <span class="hide-menu">Paramètres</span>
