fix twig template

--- a/templates/dashboard/dashboard.html.twig
+++ b/templates/dashboard/dashboard.html.twig
@@ -2,9 +2,9 @@
 
 {% block title %}Liste des Utilisateurs{% endblock %}
 
-{% block stylesheets %}
+{# {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/styleDashboard.css') }}">
-{% endblock %}
+{% endblock %} #}
 
 {% block body %}
 
