configuration page statistiques

--- a/templates/structure/sidebar.html.twig
+++ b/templates/structure/sidebar.html.twig
@@ -38,7 +38,7 @@
             </a>
           </li>
           <li class="sidebar-item">
-            <a class="sidebar-link" href="ui/ui-alerts.html" aria-expanded="false">
+            <a class="sidebar-link" href="{{path('app_statistics')}}" aria-expanded="false">
               <span>
                 <img src="{{ asset('asset/icons/stat.png') }}" class="ti icon">
               </span>
