Récit Page Login

--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -21,7 +21,7 @@
                             <a href="{{ path('homepage') }}" class="text-nowrap logo-img text-center d-block py-3 w-100">
                                 <img src="{{ asset('asset/edu3.png') }}" width="180" alt="Logo">
                             </a>
-                            <p class="text-center">Your Social Campaigns</p>
+                            <p class="text-center">Recenser votre matériel éducatif</p>
 
                             <form method="post" class="login-form">
                                 {% if error %}
