--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -215,6 +215,7 @@ h1 {
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    padding: 10px;
 }
 
 .nomcolonne{
