--- a/templates/inventory/inventory.html.twig
+++ b/templates/inventory/inventory.html.twig
@@ -27,15 +27,12 @@
                             </div>
                         </form>
 
-
-
-
                         <!-- Tableau d'inventaire -->
                         <div class="divtable">
-                            <div class="table-responsive">
-                                <table class="table table-striped table-bordered text-nowrap align-middle">
+                            <div class="table-test">
+                                <table id="inventory-table" class="test">
                                     <thead class="text-dark fs-4">
-                                        <tr class="nomcolonne">
+                                        <tr class="colonne">
                                             <th>Type Actif</th>
                                             <th>Fournisseur</th>
                                             <th>Date d'arrivée</th>
@@ -67,7 +64,7 @@
                                                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ inventory.id) }}">
                                                         <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
                                                     </form>
-                                                    <button class="btn btn-modify btn-sm"><i class="fas fa-pencil-alt"></i></button>
+                                                    {# <button class="btn btn-modify btn-sm"><i class="fas fa-pencil-alt"></i></button> #}
                                                 </td>
                                             </tr>
                                         {% endfor %}
@@ -81,5 +78,24 @@
         </div>
     </div>
 </div>
-<script src="{{ asset('js/confirmDelete.js') }}"></script>
+
+
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready(function () {
+        $('#inventory-table').DataTable({
+            language: {
+                url: '//cdn.datatables.net/plug-ins/2.1.8/i18n/fr-FR.json'
+            },
+            responsive: true,
+            autoWidth: false,
+            pageLength: 10,
+            lengthMenu: [5, 10, 25, 50],
+            order: [[2, 'desc']] 
+        });
+    });
+</script>
 {% endblock %}
