modification style inventory

--- a/templates/badge/badge.html.twig
+++ b/templates/badge/badge.html.twig
@@ -12,16 +12,16 @@
 
                         <!-- Formulaire -->
                         <form id="badge-form" class="mb-4">
-                            <div class="row">
-                                <div class="col-md-2">
+                            <div class="row" style="margin: 0;">
+                                <div class="col-md-2" style="padding: 0; margin: 0;">
                                     <label for="nom" class="form-label">Nom</label>
                                     <input type="text" class="form-control" id="nom" name="nom" placeholder="Nom">
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-2" style="padding: 0; margin: 0;">
                                     <label for="prenom" class="form-label">Prénom</label>
                                     <input type="text" class="form-control" id="prenom" name="prenom" placeholder="Prénom">
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-md-2" style="padding: 0; margin: 0;">
                                     <label for="dateTraitement" class="form-label">Date Traitement</label>
                                     <input type="date" class="form-control" id="dateTraitement" name="dateTraitement">
                                 </div>
