--- a/templates/setting/setting.html.twig
+++ b/templates/setting/setting.html.twig
@@ -19,7 +19,7 @@
                 </select>
             </div> #}
 
-            <div class="card">
+            {# <div class="card">
                 <h2 class="card-title">Thème</h2>
                 <p class="card-description">Choisissez le thème de couleur</p>
                 <form action="{{ path('change_theme') }}" method="POST">
@@ -33,7 +33,7 @@
                     </select>
                     <button type="submit">Changer le thème</button>
                 </form>
-            </div>
+            </div> #}
 
             {# <div class="card">
                 <h2 class="card-title">Notifications</h2>
