--- a/templates/structure/sidebar.html.twig
+++ b/templates/structure/sidebar.html.twig
@@ -98,7 +98,7 @@
               <span>
                 <img src="{{ asset('asset/icons/logout.png') }}" class="ti icon">
               </span>
-              <span class="hide-menu">Logout</span>
+              <span class="hide-menu">Déconnexion</span>
             </a>
           </li>
           {# <li class="nav-small-cap">
