--- a/templates/inventory/inventory.html.twig
+++ b/templates/inventory/inventory.html.twig
@@ -11,21 +11,27 @@
                         <h5 class="card-title fw-semibold mb-4 custom-title" style="font-size: 30px">Inventaire</h5>
                         
                         <!-- Formulaire de recherche et d'import -->
-                        <form method="post" action="{{ path('app_inventory_import') }}" enctype="multipart/form-data" class="form-inline mb-4">
-                            <div class="form-group">
-                                <input type="file" name="file" accept=".csv" class="form-control ms-2" required>
-                            </div>
-                            <div class="form-group mt-2">
-                                <button type="submit" class="btn btn-success ms-2"><i class="fas fa-file-import"></i> Importer</button>
-                            </div>
-                        </form>
+                        <div class="d-flex align-items-center mb-4">
+                            <!-- Formulaire de recherche et d'import -->
+                            <form method="post" action="{{ path('app_inventory_import') }}" enctype="multipart/form-data" class="me-3">
+                                <div class="d-flex align-items-center">
+                                    <div class="form-group">
+                                        <input type="file" name="file" accept=".csv" class="form-control" style="max-width: 100%; width: 500px;" required>
+                                    </div>
+                                    <div class="form-group ms-3">
+                                        <button type="submit" class="btn btn-success"><i class="fas fa-file-import"></i> Importer</button>
+                                    </div>
+                                </div>
+                            </form>
 
-                        <!-- Formulaire d'export -->
-                        <form method="post" action="{{ path('app_inventory_export') }}" class="form-inline mb-4">
-                            <div class="form-group mt-2">
-                                <button type="submit" class="btn btn-export ms-2"><i class="fas fa-file-export"></i> Exporter</button>
-                            </div>
-                        </form>
+                            <!-- Formulaire d'export -->
+                            <form method="post" action="{{ path('app_inventory_export') }}">
+                                <div class="form-group">
+                                    <button type="submit" class="btn btn-export"><i class="fas fa-file-export"></i> Exporter</button>
+                                </div>
+                            </form>
+                        </div>
+
 
                         <!-- Tableau d'inventaire -->
                         <div class="divtable">
@@ -33,7 +39,6 @@
                                 <table id="inventory-table" class="test">
                                     <thead class="text-dark fs-4">
                                         <tr class="colonne">
-                                            {# <th>RFID</th> #}
                                             <th>Type Actif</th>
                                             <th>Fournisseur</th>
                                             <th>Date d'arrivée</th>
@@ -50,7 +55,6 @@
                                     <tbody>
                                         {% for inventory in inventories %}
                                             <tr>
-                                                {# <td>{{ inventory.Reference }}</td> #}
                                                 <td>{{ inventory.activeType }}</td>
                                                 <td>{{ inventory.provider }}</td>
                                                 <td>{{ inventory.dateEntry ? inventory.dateEntry|date('Y-m-d') }}</td>
@@ -66,7 +70,6 @@
                                                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ inventory.id) }}">
                                                         <button class="btn btn-danger btn-sm"><i class="fas fa-trash-alt"></i></button>
                                                     </form>
-                                                    {# <button class="btn btn-modify btn-sm"><i class="fas fa-pencil-alt"></i></button> #}
                                                 </td>
                                             </tr>
                                         {% endfor %}
@@ -80,7 +83,6 @@
         </div>
     </div>
 </div>
-
 
 <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
