--- a/templates/structure/header.html.twig
+++ b/templates/structure/header.html.twig
@@ -1,5 +1,5 @@
 
-<div class="search-container">
+{# <div class="search-container">
     <div class="search-wrapper">
         <svg class="search-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <circle cx="11" cy="11" r="8"></circle>
@@ -7,8 +7,8 @@
         </svg>
         <input type="text" placeholder="Rechercher..." class="search-input">
     </div>
-</div>
-<div class="right-container">
+</div> #}
+{# <div class="right-container">
     <div class="language-selector">
         <button class="language-button">
             <svg width="24" height="24" viewBox="0 0 900 600" class="flag-icon">
@@ -26,7 +26,7 @@
                 <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"></path>
                 <path d="M13.73 21a2 2 0 0 1-3.46 0"></path>
             </svg>
-        </button>
+        </button> #}
     {# <div class="profile-container">
         <button class="profile-button">
             <img src="/placeholder.svg?height=32&width=32" alt="Avatar" class="avatar">
