--- a/templates/login/login.html.twig
+++ b/templates/login/login.html.twig
@@ -35,12 +35,12 @@
                                 {% endif %}
 
                                 <div class="mb-3">
-                                    <label for="username" class="form-label">Username</label>
+                                    <label for="username" class="form-label">Nom d'utilisateur</label>
                                     <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control" autocomplete="username" required autofocus>
                                 </div>
 
                                 <div class="mb-4">
-                                    <label for="password" class="form-label">Password</label>
+                                    <label for="password" class="form-label">Mot de Passe</label>
                                     <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password" required>
                                 </div>
 
